test/scc/expr/semantic-errors/050.a
050.t:3:10: error: invalid operands to binary '+'